<resources>
    <string name="app_name">동네벽보</string>


    <string name="recommendation_position_0">최근 검색</string>
    <string name="recommendation_position_1">인기 포스터</string>
    <string name="recommendation_position_2">친구가 좋아한 포스터</string>

    <string name="dateFrom">이때부터</string>
    <string name="dateTo">이때까지</string>


    <!--========================= 필터화면 =========================-->
    <string name="filter_apply">필터적용</string>
    <string name="filter_initialize">필터초기화</string>
    <string name="filter_event_category">행사종류필터</string>

    <string name="school">학교행사</string>
    <string name="school_inschool">교내행사</string>
    <string name="school_forum">학회행사</string>
    <string name="school_circle">동아리행사</string>

    <string name="exhibition">전시회</string>
    <string name="exhibition_drawing">미술</string>
    <string name="exhibition_sculpture">조각</string>

    <string name="performance">공연</string>
    <string name="performance_musical">뮤지컬</string>
    <string name="performance_act">연극</string>
    <string name="performance_concert">콘서트</string>
    <string name="performance_children_family">아동, 가족</string>

    <string name="presentation">설명회, 공모전</string>
    <string name="presentation_company">기업설명회</string>
    <string name="presentation_company_event">기업행사</string>
    <string name="presentation_passionpay">공모전</string>
    <string name="presentation_student">학생 설명</string>

    <string name="wanted">구인/구직</string>
    <string name="wanted_part_time">알바</string>
    <string name="wanted_full_time">공채/특채</string>

    <string name="choose_date">날짜 선택</string>

    <string name="choose_location">장소 선택</string>

    <string name="choose_fee_range">금액 선택</string>

    <!--========================= 개인화면 =========================-->
    <string name="favorites">즐겨찾기</string>
    <string name="subscribe">구독단체</string>
    <string name="recent_view">최근 본 이벤트</string>

    <string name="hot_issue">실시간 핫 이슈</string>

    <string name="settings">설정</string>
    <string name="notice">공지사항</string>
    <string name="customer_service">고객센터</string>


    <!--========================= 회원가입화면 브릿지 =========================-->
    <string name="log_and_sign_in">회원가입 및 로그인</string>
    <string name="log_and_sign_in_yoohoo">오늘 어디서 놀래?</string>
    <string name="log_and_sign_in_facebook">페이스북으로 로그인</string>
    <string name="log_and_sign_in_email">이메일로 로그인</string>
    <string name="log_and_sign_in_host">주최자 로그인</string>
    <string name="signin_ordinary">일반회원가입</string>
    <string name="signin_host">주최자가입</string>


    <!--========================= 회원가입화면=========================-->
    <string name="signin_top_message">사용중인 이메일로 가입하고 편리하게 사용해보세요</string>
    <string name="signin_nickname">닉네임</string>
    <string name="signin_name">ㅇ이이름</string>
    <string name="signin_email">이메일</string>
    <string name="signin_password">비밀번호</string>
    <string name="signin_password_confirm">비밀번호 확인</string>
    <string name="signin_apply">가입하기</string>
    <string name="signin_apply_facebook">페이스북으로 가입하기</string>
    <string name="signin_bottom_message">
        회원가입을 함으로써 동네벽보의 이용약관 개인정보 최급방침 및 운영원칙 이벤트와 혜택 알림에 수신동의 하시게 됩니다
    </string>
    <string name="signin_bottom_box_terms">첫차 이용약관</string>
    <string name="signin_bottom_box_rules">개인정보 취급방침 및 운영원칙</string>


    <!--========================= 메인 정보 화면 =========================-->
    <string name="information_view_content_example">
        <br>선랜은 보안이 매우 취약하므로 암호를 걸어서[15] 남들이 함부로 접속하지 못하게 하는 것이 좋다. 아예 802.11n부터는 WPA2-PSK + AES가 아닌 보안 방식으로 접속하면 강제로 802.11g 속도(54Mbps)만 내게 된다.
        즉 기껏 비싼거 샀는데 제 속도도 못 낸다는 말이다! 참고 SSID 브로드캐스팅을 막아 버리는 것은 도움은 되나, 관련 지식이 있는 사람에게는 털린다.[16][17] </br>

<br>참고로, 암호화와는 다르지만 접속 제한을 걸 때, MAC address 인증 방식은 일반인은 막을 수 있으나 MAC address 변조를 할 줄 아는 전문가에게는 털린다. 참고 속편하게 걍 AES만 믿고 가자.[18] </br>

<br>당연한 이야기지만, 무선 해킹은 기본적으로 수신범위 내에 해커가 있어야 한다. 단독주택에 살거나, 옆집에 환갑이 넘은 노부부만 계시다면 MAC 인증방식으로도 충분하다. </br>

        <br>방심하지마 환갑해커일 수도 있어 다만 해외사례 중에 안테나를 개조해서 빌딩에서 나오는 전파를 캐치해, 4㎞ 범위 내에서 강 위에서 요트를 타고 해킹을 저지르다가 잡힌 사례가 있다. 게다가 이런 경우는 다른것보다 IP를 범죄에 사용하려는 의도가 크기 때문에 이런 이유로 해외에서는 IP를 단독 증거로 인정하지 않는다. 그러나 대한민국에서는 아직도 멍청한 판검사들이 IP를 단독 증거로 인정해 주기 때문에 방심하지 말자. 물론 이경우는 어차피 각잡고 하는 것이기 때문에 뚫릴게 뻔하긴 하지만...,</br>
    </string>
</resources>
