<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:id="@+id/filterview_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!--======== 필터탑 ===========-->
    <LinearLayout
        android:id="@+id/filterview_top"
        style="@style/filter_top_view_layout">
        <TextView
            android:id="@+id/filterview_top_apply"
            style="@style/filter_top_bottom_view"
            android:text="@string/filter_apply"
            />
        <TextView
            android:id="@+id/filterview_top_initialize"
            style="@style/filter_top_bottom_view"
            android:text="@string/filter_initialize"
            />
    </LinearLayout>


        <!--==============================================================-->
        <!--======================= 행사종류 구분 ===========================-->

        <!--======== 학교행사 ===========-->
    <LinearLayout
        style="@style/filter_view_basic_frame_1"
        >
        <LinearLayout
            style="@style/filter_view_category_basic_frame_1"
            >
            <TextView
                android:id="@+id/filterview_first_primary_category"
                style="@style/filter_view_primary_category"
                android:text="@string/filter_event_category"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_first_event_category_school"
                style="@style/filter_view_main_category"
                android:onClick="filterContentClicked"
                android:text="@string/school"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_school_inschool_activities"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/school_inschool"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_school_inschool_forums"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/school_forum"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_school_inschool_circles"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/school_circle"/>
            </LinearLayout>
        </LinearLayout>

        <!--======== 전시 ===========-->
        <LinearLayout
            style="@style/filter_view_category_basic_frame_1"
            >
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_first_event_category_exhibition"
                style="@style/filter_view_main_category"
                android:onClick="filterContentClicked"
                android:text="@string/exhibition"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_exhibition_art"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/exhibition_drawing"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_exhibition_sculpture"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/exhibition_sculpture"/>
            </LinearLayout>
        </LinearLayout>

        <!--======== 공연 ===========-->
        <LinearLayout
            style="@style/filter_view_category_basic_frame_1"
            >
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_first_event_category_performance"
                style="@style/filter_view_main_category"
                android:onClick="filterContentClicked"
                android:text="@string/performance"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_performance_musical"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/performance_musical"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_performance_play"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/performance_act"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_performance_family"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/performance_children_family"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_performance_concert"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/performance_concert"/>
            </LinearLayout>
        </LinearLayout>

        <!--======== 설명회, 공모전 ===========-->
        <LinearLayout
            style="@style/filter_view_category_basic_frame_1"
            >
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_first_event_category_presentation"
                style="@style/filter_view_main_category"
                android:onClick="filterContentClicked"
                android:text="@string/presentation"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_presentation_company"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/presentation_company"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_presentation_contest"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/presentation_passionpay"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_presentation_corporate"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/presentation_company_event"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_presentation_student"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/presentation_student"/>
            </LinearLayout>
        </LinearLayout>

        <!--======== 구인, 구직 ===========-->
        <LinearLayout
            style="@style/filter_view_category_basic_frame_1"
            >
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_first_event_category_job"
                style="@style/filter_view_main_category"
                android:onClick="filterContentClicked"
                android:text="@string/wanted"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_job_part_time"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/wanted_part_time"/>
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_first_event_category_job_wanted"
                    style="@style/filter_view_sub_box_view"
                    android:onClick="filterContentClicked"
                    android:text="@string/wanted_full_time"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


        <!--==========================================================-->
        <!--======================= 날짜선택 ===========================-->
        <LinearLayout
        android:id="@+id/filterview_second_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_second_primary_category"
                style="@style/filter_view_primary_category"
                android:text="@string/choose_date"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"/>
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_second_primary_category_minimum_date"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="30dp"
                style="@style/filterview_second_primary_category_dates"
                android:onClick="filterContentClicked"
                android:text="@string/dateFrom"/>
            <dongnae.dongnaewall.filterContentView
                android:id="@+id/filterview_second_primary_category_maximum_date"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="30dp"
                style="@style/filterview_second_primary_category_dates"
                android:onClick="filterContentClicked"
                android:text="@string/dateTo"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_sun"
                    style="@style/filter_view_sub_box_view"
                    android:text="일"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_mon"
                    style="@style/filter_view_sub_box_view"
                    android:text="월"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_tue"
                    style="@style/filter_view_sub_box_view"
                    android:text="화"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_wed"
                    style="@style/filter_view_sub_box_view"
                    android:text="수"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_thu"
                    style="@style/filter_view_sub_box_view"
                    android:text="목"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_fri"
                    style="@style/filter_view_sub_box_view"
                    android:text="금"
                    android:onClick="filterContentClicked"
                    />
                <dongnae.dongnaewall.filterContentView
                    android:id="@+id/filterview_day_sat"
                    style="@style/filter_view_sub_box_view"
                    android:text="토"
                    android:onClick="filterContentClicked"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    />
            </LinearLayout>
    </LinearLayout>

        <!--==========================================================-->
        <!--======================= 장소선택 ===========================-->

        <LinearLayout
        android:id="@+id/filterview_third_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/filterview_third_primary_category"
                    style="@style/filter_view_primary_category"
                    android:text="@string/choose_location"/>
            </LinearLayout>
        </LinearLayout>

        <!--==========================================================-->
        <!--======================= 금액선택 ===========================-->

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/filterview_fourth_primary_category"
                    style="@style/filter_view_primary_category"
                    android:text="@string/choose_fee_range"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/filterview_minimumprice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="무료"
                    />
                <TextView
                    android:id="@+id/filterview_maximumprice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="1000000￦ 이상"
                    />
            </LinearLayout>
            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/filterview_seekbar"
                android:layout_width="match_parent"
                app:barHeight="30dp"
                app:thumbNormal="@drawable/seekbar"
                app:thumbPressed="@drawable/seekbar"
                app:thumbDisabled="@drawable/seekbar"
                app:absoluteMaxValue="20"
                app:absoluteMinValue="0"
                app:paddingEnd="100dp"
                app:activeColor="@color/basicStatusBarColor"
                app:valuesAboveThumbs="false"
                android:layout_height="100dp" />
        </LinearLayout>

        <!--============================================================-->
        <!--======================= 필터 bottom ===========================-->

        <LinearLayout
        android:id="@+id/filterview_bottom"
            style="@style/filter_top_bottom_view">
        <TextView
            android:id="@+id/filterview_bottom_apply"
            style="@style/filter_top_bottom_view"
            android:text="@string/filter_apply"
            />
        <TextView
            android:id="@+id/filterview_bottom_initialize"
            style="@style/filter_top_bottom_view"
            android:text="@string/filter_initialize"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>