<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/CreateAndSignInBridge"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--========================= 세로 기준 12등분 =========================-->

    <!--========================= 회원가입 및 로그인 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/Bridge1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_and_sign_in"/>
    </LinearLayout>

    <!--========================= 공백 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/BridgeSpace1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>

    <!--========================= 로고 or 그림 (weight : 2)=========================-->
    <LinearLayout
        android:id="@+id/Bridge2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/profile_50"/>
    </LinearLayout>

    <!--========================= 문구 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/Bridge3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_and_sign_in_yoohoo"
            />

    </LinearLayout>

    <!--========================= 공백 (weight : 1) / =========================-->
    <!--========================= marginBottom 줘서 공백 좀 줄임. 깨질 수 있는 요소 =========================-->
    <LinearLayout
        android:id="@+id/BridgeSpace2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="-50dp"
        android:orientation="horizontal">
    </LinearLayout>

    <!--========================= 페북으로 로그인 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/Bridge4"
        style="@style/LogInBoxes"
        android:background="@drawable/login_boxes_border">
        <TextView
            style="@style/SignAndLogInBoxesTexts"
            android:text="@string/log_and_sign_in_facebook"/>
    </LinearLayout>

    <!--========================= 이메일로 로그인 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/Bridge5"
        style="@style/LogInBoxes"
        android:background="@drawable/login_boxes_border">
        <TextView
            style="@style/SignAndLogInBoxesTexts"
            android:text="@string/log_and_sign_in_facebook"/>
    </LinearLayout>

    <!--========================= 주최자 로그인 (weight : 1)=========================-->
    <LinearLayout
        android:id="@+id/Bridge6"
        style="@style/LogInBoxes"
        android:background="@drawable/login_boxes_border">
        <TextView
            style="@style/SignAndLogInBoxesTexts"
            android:text="@string/log_and_sign_in_host"/>
    </LinearLayout>

    <!--========================= 공백 (weight : 1) / =========================-->
    <LinearLayout
        android:id="@+id/BridgeSpace3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>

    <!--========================= 일반 회원 가입 / 주최자 가입 신청 (weight : 1) =========================-->
    <LinearLayout
        android:id="@+id/Bridge7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/SignInBoxes_left">
            <TextView
                style="@style/SignAndLogInBoxesTexts"
                android:text="@string/signin_ordinary"/>
        </LinearLayout>
        <LinearLayout
            style="@style/SignInBoxes_right">
            <TextView
                style="@style/SignAndLogInBoxesTexts"
                android:text="@string/signin_host"/>
        </LinearLayout>

    </LinearLayout>

    <!--========================= 공백 (weight : 1) / =========================-->
    <LinearLayout
        android:id="@+id/BridgeSpace4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>
    </LinearLayout>
</ScrollView>